<resources>
    <string name="app_name">BreathSafe</string>
    <string name="title_activity_maps">Map</string>

    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="option_select_location">Select</string>
    <string name="pick_place">Choose a place</string>

    <string name="menu_search_title_search_category">Search Category</string>
    <string name="menu_search_title_select_item">Select Item</string>
    <string name="menu_search_title_select_category">Select Category</string>
    <string name="menu_maps_title_clear">Clear</string>
    <string name="menu_maps_title_search">Search</string>
    <string name="menu_maps_title_settings">Settings</string>


    <string name="title_activity_maps23">Map3</string>
    <string name="title_activity_search">Search</string>
    <string name="database">BreathSafe</string>

    <string name="search_field">Search</string>

    <string name="fragment_user_list">User List</string>

    <string name="no_location_selected">No Location Selected</string>

    <string name="air_quality_string_not_found">Could not find probable air Quality</string>
    <string name="air_quality_string_good">Air quality is Good</string>
    <string name="air_quality_string_moderate">Air quality is Moderate</string>
    <string name="air_quality_string_unhealthy_sensitive">Air quality is Unhealthy for Sensitive Groups</string>
    <string name="air_quality_string_unhealthy">Air quality is Unhealthy</string>
    <string name="air_quality_string_very_unhealthy">Air quality is Very Unhealthy</string>

    <string name="comment_button_title">Comments</string>
    <string name="go_to_map_button_title">Map</string>
    <string name="go_to_favourites_button_title">Favourites</string>
    <string name="menu_maps_title_add_favorite">Add Favorite</string>
    <string name="menu_maps_title_remove_favorite">Remove Favorite</string>
    <string name="saved_to_favorites">is now saved to Favorites</string>
    <string name="already_in_favorites">is already in Favorites</string>
    <string name="title_activity_settings">Settings</string>
    <string name="favorites_text_view">Favorites</string>


    <string name="menu_main_title_settings">Settings</string>
    <string name="no_network_available">No network is enabled. Please turn on wifi or other network connectivity.</string>
    <string name="menu_main_title_refresh_locations">Refresh Locations</string>
    <string name="about_places">This application uses the Open Stockholm API to find all Location presented in the app.</string>
    <string name="about_air_pollution">This app uses the luftdaten API to retrieve data used to calculate the level of air pollution.</string>
    <string name="about_P1_P2">The air quality is based on a weighted value for PM2.5 and PM10 of 5 nearby sensors. These values are further weighted into an approximate AQI for PM2.5 and PM10, though a real AQI would use more parameters than just PM2.5 and PM10. </string>
    <string name="menu_main_title_about">About</string>
    <string name="comment_add_button_title">Add</string>
    <string name="comment_cancel_button_title">Cancel</string>
    <string name="comment_title_hint">Title</string>
    <string name="comment_text_hint">Text</string>
    <string name="comment_add_comment_button_title">Add Comment</string>
    <string name="firebase_table_users">users</string>
    <string name="intent_extra_location">comment_location</string>
    <string name="intent_extra_location_id">comment_location_id</string>
    <string name="intent_extra_location_name">comment_location_extra_name</string>
    <string name="firebase_table_comments">comments</string>
    <string name="read_comment_extra_author">read_comment_extra_author</string>
    <string name="read_comment_extra_timestamp">read_comment_extra_timestamp</string>
    <string name="read_comment_extra_title">read_comment_extra_title</string>
    <string name="read_comment_extra_text">read_comment_extra_text</string>
</resources>
